# mlops-cloud-project-mlops_11

./: .dockerignore  .env.backup-20250608-231446  .env.template  .gitignore  .markdown-link-check.json  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  BUGFIX_REPORT.md  CONTAINER_CONFLICT_SOLUTION.md  DEVELOPMENT_GUIDE.md  Dockerfile.dev  PHASE2_README.md  PHASE4_COMPLETION_REPORT.md  README.md  api_simple.py  check_docker_compose_fix.sh  docker-compose.api.yml  docker-compose.yml  fix_database_complete.sh  fix_database_manual.sh  fix_services.sh  mypy.ini  pyproject.toml  pytest.ini  registry.db  requirements-dev.txt  requirements.txt  run_api_local.sh  run_ml.sh  run_movie_mlops.sh  run_tests.sh  setup-dev.ps1  setup-docker-feature-store.bat  setup-docker-feature-store.sh  setup-docker.sh  setup-git.ps1  start_jupyter.sh  test_venv_cleanup.sh
.github/workflows/: cd.yml  ci.yml  dependencies.yml  docs.yml  ml-pipeline.yml
.obsidian/: community-plugins.json  workspace.json
airflow/dags/: kafka_integration.py  mlflow_integration.py  movie_data_collection.py  movie_training_pipeline.py
docker/: docker-compose.airflow.yml  docker-compose.api-standalone.yml  docker-compose.api.yml  docker-compose.feast.yml  docker-compose.full-stack.yml  docker-compose.jupyter.yml  docker-compose.kafka.yml  docker-compose.main.yml  docker-compose.mlflow.yml  docker-compose.monitoring.yml  docker-compose.phase3.yml  docker-compose.phase4.yml  docker-compose.postgres.yml  docker-compose.pytorch.yml  docker-compose.redis.yml
docker/configs/alertmanager/: alertmanager.yml
docker/configs/blackbox/: blackbox.yml
docker/configs/prometheus/: prometheus.yml
docker/dockerfiles/: Dockerfile.airflow  Dockerfile.api  Dockerfile.feast  Dockerfile.jupyter  Dockerfile.mlflow  Dockerfile.pytorch
docker/stacks/: docker-compose.ml-stack-fixed.yml  docker-compose.ml-stack.yml  docker-compose.monitoring.yml
docs/: ARCHITECTURE.md
docs/01-data-processing/: 1.1-data-source-connection-wsl-ubuntu-guide.md  1.data-processing-implementation-guide.md
docs/01-data-processing/implementation/: 1.1-data-source-connection-wsl-ubuntu-guide.md  1.2-data-crawler-development-guide.md  1.3-data-collection-scheduling-guide.md  1.4-data-storage-setup-guide.md  1.5-data-quality-validation-guide.md  README.md  (+3 more)
docs/01-data-processing/implementation-reports/: README.md
docs/02-feature-store/: requirements-dev.txt  requirements.txt
docs/03-version-control/: 1.version-control-implementation-guide.md  PROGRESS.md
docs/overview/: 0.mlops-architecture-complete-9stages.html  0.mlops-architecture-complete-9stages.md  1.mlops-house-building-analogy.html  1.mlops-house-building-analogy.md  2.mlops-architecture-efficient-implementation-strategy.html  2.mlops-architecture-efficient-implementation-strategy.md  3.legacy-project-migration-guide.html  3.legacy-project-migration-guide.md  4.architecture-by-architecture-execution-guide.html  4.architecture-by-architecture-execution-guide.md  5.integrated-system-execution-guide.html  5.integrated-system-execution-guide.md  COMPATIBILITY_MATRIX.md
docs/setup/: DOCKER_COMPOSE_V2_UPDATE.md  QUICK_SETUP.md
docs/troubleshooting/: PYTHON_ENVIRONMENT.md
experiments/: hyperparameter_test.md
experiments/hyperparameter-optimization/: experiment_config.json
feast_repo/: custom_feast_server.py  init_feast.py  start_feast.sh
requirements/: airflow.txt  api.txt  base.txt  dev.txt  feast.txt  jupyter.txt  kafka.txt  mlflow.txt  monitoring.txt  postgres.txt  prod.txt  pytorch.txt  redis.txt
scripts/: test_mlflow_api.sh
scripts/data/: run_data_collection.py
scripts/docker/: fix_docker_compose_commands.sh  start_all_services.sh  stop_all_services.sh
scripts/migration/: migrate_all_stages_fixed.sh  rollback.sh
scripts/ml/: README.md  quick_ml_run.sh  run_ml_pipeline.py  run_ml_pipeline.sh  test_ml_stack.sh
scripts/monitoring/: diagnose_service_access.sh  diagnose_services.sh  fix_service_access.sh  restart_monitoring.sh  test_monitoring_stack.sh
scripts/setup/: apply_refactoring.sh  check_github_actions.sh  check_python_versions.sh  check_stage1_completion.sh  cleanup_python_environment.sh  complete_stage1.bat  complete_stage1.sh  fix_wsl_issues.sh  install-with-constraints.sh  quick_fix_and_restart.sh  quick_start_api.sh  run_api_simple.sh  run_feast_fastapi.sh  setup_phase2_permissions.sh  setup_wsl_docker.sh  start_jupyter_simple.sh
scripts/test/: quick_service_check.sh  run_tests.bat  test_api.sh  test_api_integration.sh  test_feast.sh  test_mlflow.sh  test_mlflow_isolated.sh  test_phase2_integration.sh  test_phase3_integration.sh  test_phase4_integration.sh  test_prometheus.sh  test_pytorch.sh
src/: __init__.py  main.py
src/api/: __init__.py  main.py  main_backup.py  main_simple.py  main_v1.py
src/data_processing/: __init__.py  environment_manager.py  test_integration.py  tmdb_api_connector.py
src/dataset/: watch_log.py  watch_log_fixed.py
src/evaluate/: evaluate.py
src/events/: event_schemas.py  kafka_consumer.py  kafka_producer.py  stream_processor.py
src/mlflow/: experiment_tracker.py  model_registry.py
src/monitoring/: alerting.py  custom_metrics.py  health_checker.py  prometheus_metrics.py
src/training/: train.py
src/utils/: utils.py
temp-cleanup/: CLEANUP_SUMMARY.md  MANUAL_SETUP_COMMANDS.md  ROOT_CLEANUP_REPORT.md  fix-docker-setup.bat  quick-setup-wsl.sh  setup-feature-store-prerequisites.bat  setup-feature-store-prerequisites.ps1  setup-feature-store-prerequisites.sh
temp-cleanup/cleanup-pending-backup/: benchmark_results.txt  simple_storage_test.py  test_complete_system.py  test_complete_system_fixed.py  test_scheduler_simple.py
temp-cleanup/root-files/: demo_feature_store.py  prepare_test_data.bat  prepare_test_data.sh  run_all_feature_store_tests.bat  run_all_feature_store_tests.sh  run_system_test.bat  test-docker-feature-store.sh  test_feature_store.py
tests/: __init__.py
tests/e2e/: __init__.py  test_complete_workflow.py
tests/integration/: test_docker_integration.py
tests/unit/: test_package_compatibility.py
(+77 files in other folders)
